--- a/client/src/app/announcements/announcement-form/announcement-form.component.html
+++ b/client/src/app/announcements/announcement-form/announcement-form.component.html
@@ -15,7 +15,7 @@
       <gs-text-input [formControl]='registerForm.controls["duration"]' [label]='"Czas trwania \(godziny\)"' [type]='"number"'></gs-text-input>
 
       <div class="form-group mb-2">
-        <label class="control-label" style="margin-right: 10px;">Adres:</label>
+        <label class="control-label" style="margin-right: 10px; font-weight: 600;">Adres:</label>
         <label class="radio-inline">
           <input type="radio" name="address" value="empty_address" (click)="setEmptyAddress()" checked> Nowy adres
         </label>
