--- a/client/src/app/users/user-form/user-form.component.html
+++ b/client/src/app/users/user-form/user-form.component.html
@@ -6,7 +6,7 @@
       <gs-text-input [formControl]='userForm.controls["lastName"]' [label]='"Nazwisko"'></gs-text-input>
 
       <div class="form-group mb-2">
-        <label class="control-label" style="margin-right: 10px;">Płeć: </label>
+        <label class="control-label" style="margin-right: 10px; font-weight: 600;">Płeć: </label>
         <label class="radio-inline">
             <input type="radio" value="male" formControlName='gender'> Mężczyzna
         </label>
@@ -22,7 +22,7 @@
       </mat-form-field>
 
       <div class="form-group mb-2">
-        <label class="control-label" style="margin-right: 10px;">Adres:</label>
+        <label class="control-label" style="margin-right: 10px; font-weight: 600;">Adres:</label>
         <label class="radio-inline">
           <input type="radio" name="address" value="unsetAddress" checked (click)="unsetAddress()"> Brak
         </label>
