--- a/client/src/app/core/nav/nav.component.html
+++ b/client/src/app/core/nav/nav.component.html
@@ -1,37 +1,74 @@
 <nav>
   <div class="logo">Wyprzedaż garażowa</div>
-  <ul class="ul-left">
-    <li><a routerLink="/">Strona Główna</a></li>
-    <ng-container *ngIf="(accountService.currentUser$ | async)">
-    <li>
-      <a routerLink="/user-announcements">Twoje ogłoszenia</a>
-      <ul>
-        <li><a routerLink="/announcements-add" >Dodaj ogłoszenie</a></li>
-      </ul>
-    </li>
-    <li *gsHasRole='["Admin", "Moderator"]'>
-      <a>Panel administracyjny</a>
-      <ul>
-        <li><a routerLink="/announcements-for-approval">Akceptacja ogłoszeń</a></li>
-        <li *gsHasRole='["Admin"]'>
-          <a routerLink="/users">Użytkownicy</a>
-        </li>
-      </ul>
-    </li>
-  </ng-container>
-  </ul>
-  <ul class="ul-right">
-    <ng-container *ngIf="(accountService.currentUser$ | async) as user">
-      <div class="welcome">Witaj, {{user.firstName || user.userName | titlecase }}</div>
-      <img src="./assets/user.png" alt="avatar">
-      <li>
-        <a routerLink="/user-edit">Profil</a>
+  <a class="toggle-button" *ngIf="!bigScreen" (click)="onToggle()">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+  </a>
+  <ng-container *ngIf="bigScreen">
+    <ul class="ul-left">
+      <li><a routerLink="/">Strona Główna</a></li>
+      <ng-container *ngIf="(accountService.currentUser$ | async)">
+      <li class="bigScreen">
+        <a routerLink="/user-announcements">Twoje ogłoszenia</a>
+        <ul class="navulul_bigScreen">
+          <li><a routerLink="/announcements-add" >Dodaj ogłoszenie</a></li>
+        </ul>
       </li>
-      <li><a (click)="logout()">Wyloguj</a></li>
+      <li class="bigScreen" *gsHasRole='["Admin", "Moderator"]'>
+        <a>Panel administracyjny</a>
+        <ul class="navulul_bigScreen">
+          <li><a routerLink="/announcements-for-approval">Akceptacja ogłoszeń</a></li>
+          <li *gsHasRole='["Admin"]'>
+            <a routerLink="/users">Użytkownicy</a>
+          </li>
+        </ul>
+      </li>
     </ng-container>
-    <ng-container *ngIf="(accountService.currentUser$ | async) === null">
-      <li><a routerLink="/login">Logowanie</a></li>
-      <li><a routerLink="/register">Rejestracja</a></li>
+    </ul>
+    <ul class="ul-right">
+      <ng-container *ngIf="(accountService.currentUser$ | async) as user">
+        <div class="welcome">Witaj, {{user.firstName || user.userName | titlecase }}</div>
+        <img src="./assets/user.png" alt="avatar">
+        <li>
+          <a routerLink="/user-edit">Profil</a>
+        </li>
+        <li><a (click)="logout()">Wyloguj</a></li>
+      </ng-container>
+      <ng-container *ngIf="(accountService.currentUser$ | async) === null">
+        <li><a routerLink="/login">Logowanie</a></li>
+        <li><a routerLink="/register">Rejestracja</a></li>
+      </ng-container>
+    </ul>
+  </ng-container>
+
+  <ng-container *ngIf="showToggle">
+    <ul style="clear: both; text-align: center; border-top: 2px solid cyan;">
+      <ng-container *ngIf="(accountService.currentUser$ | async) as user">
+        <div class="welcome">Witaj, {{user.firstName || user.userName | titlecase }}</div>
+        <img src="./assets/user.png" alt="avatar">
+      </ng-container>
+      <li style="display: block;"><a (click)="onToggle()" routerLink="/">Strona Główna</a></li>
+      <ng-container *ngIf="(accountService.currentUser$ | async)">
+      <li style="display: block;"><a (click)="onToggle()" routerLink="/user-announcements">Twoje ogłoszenia</a>
+      <li style="display: block; margin-left: auto; margin-right: auto;"><a (click)="onToggle()" routerLink="/announcements-add" >Dodaj ogłoszenie</a></li>
+      <li style="display: block; margin-left: auto; margin-right: auto;" *gsHasRole='["Admin", "Moderator"]'>
+        <a (click)="onToggle()" routerLink="/announcements-for-approval">Akceptacja ogłoszeń</a>
+      </li>
+      <li style="display: block; margin-left: auto; margin-right: auto;" *gsHasRole='["Admin"]'><a (click)="onToggle()" routerLink="/users">Użytkownicy</a>
     </ng-container>
-  </ul>
+    </ul>
+    <ul style="clear: both; text-align: center;">
+      <ng-container *ngIf="(accountService.currentUser$ | async) as user">
+        <li style="display: block;">
+          <a (click)="onToggle()" routerLink="/user-edit">Profil</a>
+        </li>
+        <li style="display: block;"><a (click)="logout()">Wyloguj</a></li>
+      </ng-container>
+      <ng-container *ngIf="(accountService.currentUser$ | async) === null">
+        <li style="display: block;"><a (click)="onToggle()" routerLink="/login">Logowanie</a></li>
+        <li style="display: block;"><a (click)="onToggle()" routerLink="/register">Rejestracja</a></li>
+      </ng-container>
+    </ul>
+  </ng-container>
 </nav>
