--- a/client/src/app/announcements/announcement-form/announcement-form.component.html
+++ b/client/src/app/announcements/announcement-form/announcement-form.component.html
@@ -1,18 +1,18 @@
 <div class="row justify-content-center form-container">
   <div class="col-4">
-    <form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && saveAnnouncement()" autocomplete="off">
+    <form [formGroup]="announcementForm" (ngSubmit)="announcementForm.valid && saveAnnouncement()" autocomplete="off">
 
-      <gs-text-input [formControl]='registerForm.controls["name"]' [label]='"Nazwa ogłoszenia"'></gs-text-input>
-      <gs-text-input-area [formControl]='registerForm.controls["description"]' [label]='"Opis"'></gs-text-input-area>
+      <gs-text-input [formControl]='announcementForm.controls["name"]' [label]='"Nazwa ogłoszenia"'></gs-text-input>
+      <gs-text-input-area [formControl]='announcementForm.controls["description"]' [label]='"Opis"'></gs-text-input-area>
 
       <mat-form-field style="width: 100%;">
-        <input matInput [ngxMatDatetimePicker]="picker" [formControl]='registerForm.controls["startDate"]' placeholder="Data i godzina wydarzenia"
+        <input matInput [ngxMatDatetimePicker]="picker" [formControl]='announcementForm.controls["startDate"]' placeholder="Data i godzina wydarzenia"
           [min]="minDate" required>
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <ngx-mat-datetime-picker #picker></ngx-mat-datetime-picker>
       </mat-form-field>
 
-      <gs-text-input [formControl]='registerForm.controls["duration"]' [label]='"Czas trwania \(godziny\)"' [type]='"number"'></gs-text-input>
+      <gs-text-input [formControl]='announcementForm.controls["duration"]' [label]='"Czas trwania \(godziny\)"' [type]='"number"'></gs-text-input>
 
       <div class="form-group mb-2">
         <label class="control-label" style="margin-right: 10px; font-weight: 600;">Adres:</label>
@@ -31,7 +31,7 @@
       </div>
 
       <div class="form-group text-center">
-        <button [disabled]="!registerForm.valid" id="btn-submit" class="btn btn-success me-2" type="submit" onclick="this.blur()">{{btnSubmitText}}</button>
+        <button [disabled]="!announcementForm.valid" id="btn-submit" class="btn btn-success me-2" type="submit" onclick="this.blur()">{{btnSubmitText}}</button>
       </div>
     </form>
   </div>
