--- a/client/src/app/core/nav/nav.component.html
+++ b/client/src/app/core/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <div class="logo">Wyprzedaż garażowa</div>
+  <div class="logo">Garażeria</div>
   <a class="toggle-button" *ngIf="!bigScreen" (click)="onToggle()">
     <span class="bar"></span>
     <span class="bar"></span>
