--- a/client/src/app/admin-panel/user-card/user-card.component.css
+++ b/client/src/app/admin-panel/user-card/user-card.component.css
@@ -11,6 +11,7 @@
 
 .member-card{
   min-height: 200px;
+  margin-bottom: 20px;
   height: auto;
   display: flex;
   justify-content: space-between;
