--- a/client/src/app/core/forms/text-input/text-input.component.html
+++ b/client/src/app/core/forms/text-input/text-input.component.html
@@ -23,4 +23,7 @@
   <div *ngIf="ngControl.control.errors?.['isMatching']" class="invalid-feedback">
       Hasła się nie zgadzają!
   </div>
+  <div *ngIf="ngControl.control.errors?.['pattern']" class="invalid-feedback">
+      Hasło musi składać się z liczb, dużych i małych liter oraz znaków specjalnych
+</div>
 </div>
